Добавлена регистрация (без авторизации) и страница со списком купленных товаров. Так же заметил, что от меня просят не интернет магазин, а именно CRM. мда...

--- a/src/main/resources/spring-frontend/assets/css/my.css
+++ b/src/main/resources/spring-frontend/assets/css/my.css
@@ -389,6 +389,7 @@ header {
 .Header-cart {
     position: relative;
     display: flex;
+    min-width: 15%;
     width: auto;
 }
 @media screen and (max-width: 990px) {
